--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="/rsschool-cv/css/style.css" />
     <title>CV#2</title>
   </head>
   <body>
-    <div class="main">
+    <header>
       <h1>About myself</h1>
+    </header>
+    <main>
+      <div class="avatar">
+        <img src="/rsschool-cv/img/copy1.JPG" alt="avatar" />
+      </div>
       <div class="myself">
         <p>Name: Ilmir Kavyev</p>
         <p>Age: 23</p>
@@ -19,13 +23,7 @@
           <li>phone: +7999999999</li>
         </ul>
       </div>
-      <h2>Some text</h2>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
-        accusantium tempore aliquam quisquam sed illo expedita? Quos ipsam id
-        asperiores iure, laudantium odit fuga quas laboriosam ea, ullam nisi
-        saepe!
-      </p>
-    </div>
+    </main>
   </body>
+  <footer>Pre-School 2022Q2</footer>
 </html>
