fix:changed details

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-
-    <link rel="stylesheet" href="/rsschool-cv/css/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/rsschool-cv/css/style.css">
     <title>CV#2</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
     </header>
     <main>
       <div class="avatar">
-        <img src="/rsschool-cv/img/copy1.JPG" alt="avatar" />
+        <img src="/rsschool-cv/img/copy1.JPG" alt="avatar">
       </div>
       <div class="myself">
         <p>Name: Ilmir Kavyev</p>
@@ -25,5 +26,5 @@
       </div>
     </main>
   </body>
-  <footer>Pre-School 2022Q2</footer>
+  <div class="footer">Pre-School 2022Q2</div>
 </html>
