--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang>
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/rsschool-cv/css/style.css">
     <title>CV#2</title>
   </head>
@@ -14,8 +12,6 @@
     <main>
       <div class="avatar">
         <img src="/rsschool-cv/img/copy1.JPG" alt="avatar">
-      </div>
-      <div class="myself">
         <p>Name: Ilmir Kavyev</p>
         <p>Age: 23</p>
         <p>Contact:</p>
@@ -23,8 +19,6 @@
           <li>email: jkaem111@gmail.com</li>
           <li>phone: +7999999999</li>
         </ul>
-      </div>
     </main>
   </body>
-  <div class="footer">Pre-School 2022Q2</div>
 </html>
