fix: delete more <div> elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang>
+<html>
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/rsschool-cv/css/style.css">
@@ -10,7 +10,6 @@
       <h1>About myself</h1>
     </header>
     <main>
-      <div class="avatar">
         <img src="/rsschool-cv/img/copy1.JPG" alt="avatar">
         <p>Name: Ilmir Kavyev</p>
         <p>Age: 23</p>
