--- a/index.html
+++ b/index.html
@@ -1,23 +1,115 @@
 <!DOCTYPE html>
-<html  lang="en">
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/rsschool-cv/css/style.css">
-    <title>CV#2</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ilmir Kavyev - CV</title>
   </head>
   <body>
-    <header>
-      <h1>About myself</h1>
-    </header>
-    <main>
-        <img src="/rsschool-cv/img/copy1.JPG" alt="avatar">
-        <p>Name: Ilmir Kavyev</p>
-        <p>Age: 23</p>
-        <p>Contact:</p>
-        <ul>
-          <li>email: jkaem111@gmail.com</li>
-          <li>phone: +7999999999</li>
-        </ul>
-    </main>
+    <div class="wrapepr">
+      <header class="header">
+        <div class="userpic">
+          <img src="/img/ilmir.JPG" alt="Photo progile" />
+        </div>
+        <nav class="nav-menu">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About me</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#education" class="nav-link">Education</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="heading">
+          <h1 class="name">Ilmir Kavyev</h1>
+          <p class="profession">Front-end Developer</p>
+        </div>
+      </header>
+      <main class="main">
+        <div class="left-side">
+          <section class="section" id="about">
+            <h2 class="title">About me</h2>
+            <p class="subtitle">
+              Hello, I'm 23 years old and I'm a future front-end developer. My
+              main qualities are learning, communication and responsibility.
+            </p>
+          </section>
+          <section class="section" id="contact">
+            <h2 class="title">Contact</h2>
+            <ul class="contact-list">
+              <li class="contact-item">jkaem111@gmail.com</li>
+              <li class="contact-item">
+                <a class="link" href="https://t.me/h1stil" target="_blank"
+                  >Telegram</a
+                >
+              </li>
+              <li class="contact-item">Ufa, Saint-Petersburg</li>
+            </ul>
+          </section>
+        </div>
+        <div class="right-side">
+          <section class="section" id="skills">
+            <h2 class="title">Skills</h2>
+            <ul class="skill-list">
+              <li class="skill-item">HTML</li>
+              <li class="skill-item">CSS</li>
+              <li class="skill-item">JS</li>
+            </ul>
+          </section>
+          <section class="section" id="code">
+            <h2 class="title">Code</h2>
+            <div class="code">
+              <code> function(a+b) some text result </code>
+            </div>
+          </section>
+          <section class="section" id="projects">
+            <h2 class="title">Projects</h2>
+            <a
+              class="link"
+              href="https://h1stil.github.io/rsschool-cv/cv"
+              target="_blank"
+              >CV Markdown
+            </a>
+          </section>
+          <section class="section" id="education">
+            <h2 class="title">Education</h2>
+            <table>
+              <tr>
+                <th>2017-2021</th>
+                <td>Saint-Petersburg Mining University</td>
+              </tr>
+              <tr>
+                <th>Bachelor's Degree</th>
+                <td>
+                  Oil and Gas Engineering. Construction and repair of pipeline
+                  transport facilities
+                </td>
+              </tr>
+            </table>
+          </section>
+        </div>
+      </main>
+      <footer class="footer">
+        <p><a href="https://github.com/h1stil" target="_blank">GitHub</a></p>
+        <p>2022</p>
+        <div class="logo">
+          <a href="https://rs.school/js-stage0/" target="_blank">
+            <img src="/img/rs_school_js.svg" alt="RS-School logo" />
+          </a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
