feat: styled for index.html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ilmir Kavyev - CV</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;300;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="wrapepr">
+    <div class="wrapper">
       <header class="header">
-        <div class="userpic">
-          <img src="/img/ilmir.JPG" alt="Photo progile" />
-        </div>
         <nav class="nav-menu">
           <ul class="nav-list">
             <li class="nav-item">
@@ -33,19 +37,15 @@
           </ul>
         </nav>
         <div class="heading">
-          <h1 class="name">Ilmir Kavyev</h1>
-          <p class="profession">Front-end Developer</p>
+          <img id="user" src="/img/ilmir.JPG" alt="Photo progile" />
+          <div class="front">
+            <h1 class="name">Ilmir Kavyev</h1>
+            <p class="profession">Front-end Developer</p>
+          </div>
         </div>
       </header>
       <main class="main">
         <div class="left-side">
-          <section class="section" id="about">
-            <h2 class="title">About me</h2>
-            <p class="subtitle">
-              Hello, I'm 23 years old and I'm a future front-end developer. My
-              main qualities are learning, communication and responsibility.
-            </p>
-          </section>
           <section class="section" id="contact">
             <h2 class="title">Contact</h2>
             <ul class="contact-list">
@@ -58,22 +58,40 @@
               <li class="contact-item">Ufa, Saint-Petersburg</li>
             </ul>
           </section>
-        </div>
-        <div class="right-side">
           <section class="section" id="skills">
             <h2 class="title">Skills</h2>
             <ul class="skill-list">
-              <li class="skill-item">HTML</li>
-              <li class="skill-item">CSS</li>
-              <li class="skill-item">JS</li>
+              <li class="skill-item">
+                HTML&nbsp;
+                <progress value="70" max="100">70 %</progress>
+              </li>
+              <li class="skill-item">
+                CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <progress value="50" max="100">50 %</progress>
+              </li>
+              <li class="skill-item">
+                JS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <progress value="2" max="100">2 %</progress>
+              </li>
             </ul>
           </section>
           <section class="section" id="code">
             <h2 class="title">Code</h2>
             <div class="code">
-              <code> function(a+b) some text result </code>
+              <code> console.log('Hello, World!'); </code>
             </div>
           </section>
+        </div>
+
+        <div class="right-side">
+          <section class="section" id="about">
+            <h2 class="title">About me</h2>
+            <p class="subtitle">
+              Hello, I'm 23 years old and I'm a future front-end developer. My
+              main qualities are learning, communication and responsibility.
+            </p>
+          </section>
+
           <section class="section" id="projects">
             <h2 class="title">Projects</h2>
             <a
@@ -82,6 +100,7 @@
               target="_blank"
               >CV Markdown
             </a>
+            <p>coming soon...</p>
           </section>
           <section class="section" id="education">
             <h2 class="title">Education</h2>
@@ -102,11 +121,15 @@
         </div>
       </main>
       <footer class="footer">
-        <p><a href="https://github.com/h1stil" target="_blank">GitHub</a></p>
+        <p>
+          <a class="link-git" href="https://github.com/h1stil" target="_blank"
+            >GitHub</a
+          >
+        </p>
         <p>2022</p>
-        <div class="logo">
+        <div>
           <a href="https://rs.school/js-stage0/" target="_blank">
-            <img src="/img/rs_school_js.svg" alt="RS-School logo" />
+            <img id="logo" src="/img/rs_school_js.svg" alt="RS-School logo" />
           </a>
         </div>
       </footer>
