fix: fixed file location

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ilmir Kavyev - CV</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,7 +37,7 @@
           </ul>
         </nav>
         <div class="heading">
-          <img id="user" src="/img/ilmir.JPG" alt="Photo progile" />
+          <img id="user" src="./img/ilmir.JPG" alt="Photo progile" />
           <div class="front">
             <h1 class="name">Ilmir Kavyev</h1>
             <p class="profession">Front-end Developer</p>
@@ -129,7 +129,7 @@
         <p>2022</p>
         <div>
           <a href="https://rs.school/js-stage0/" target="_blank">
-            <img id="logo" src="/img/rs_school_js.svg" alt="RS-School logo" />
+            <img id="logo" src="./img/rs_school_js.svg" alt="RS-School logo" />
           </a>
         </div>
       </footer>
